@@ -89,7 +89,8 @@ Log ACCEPT and REJECT messages to the system log.
 .PP
 \-\-sudo
 .RS 4
-Call SSH_ORIGINAL_COMMAND using sudo.
+Allow btrfs commands to be called via sudo. Enable this if you have
+"backend btrfs-progs-sudo" in your btrbk configuration file.
 .RE
 .SH AVAILABILITY
 Please refer to the btrbk project page \fBhttp://digint.ch/btrbk/\fR
